--- a/Lycomedes/.classpath
+++ b/Lycomedes/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="tests"/>
-	<classpathentry kind="src" path="designs"/>
 	<classpathentry kind="src" path="player"/>
 	<classpathentry kind="src" path="builder"/>
+	<classpathentry kind="src" path="mockups"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
