--- a/Lycomedes/.classpath
+++ b/Lycomedes/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry kind="src" path="designs"/>
 	<classpathentry kind="src" path="player"/>
 	<classpathentry kind="src" path="builder"/>
+	<classpathentry kind="src" path="design"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
